# open

./: .gitignore  .gitmodules  CHANGELOG.md  README.md
DevOps/: README.md
DevOps/Git/: README.md  (+1 more)
DevOps/Python/: BUILD.bazel  WORKSPACE
DevOps/Python/deployment/dashboard/: BUILD  requirements.txt  service.py
DevOps/Python/deployment/dashboard/apiv1/: __init__.py
DevOps/Python/deployment/dashboard/apiv1/system/: __init__.py
DevOps/Python/deployment/dashboard/views/: __init__.py
DevOps/Python/deployment/dashboard/views/index/: __init__.py
DevOps/Python/deployment/dashboard/views/index/templates/: index.html
DevOps/Python/examples/curd_service/: BUILD  requirements.txt  service.py
DevOps/Python/examples/curd_service/apiv1/: BUILD  __init__.py
DevOps/Python/examples/curd_service/apiv1/model1/: BUILD  __init__.py
DevOps/Python/examples/curd_service/apiv1/model2/: BUILD  __init__.py
DevOps/Python/examples/curd_service/apiv2/: __init__.py
DevOps/Python/examples/curd_service/modules/adapter/base/: BUILD
DevOps/Python/examples/curd_service/modules/adapter/flask/: __init__.py
DevOps/Python/examples/curd_service/modules/log/: BUILD  __init__.py
DevOps/Python/examples/grpc_service/: BUILD  hello_service.proto  service.py  test.py
DevOps/Python/examples/grpc_service/modules/adapter/flask/: BUILD  __init__.py
DevOps/Python/examples/student_crud/: main.py
DevOps/Python/examples/student_crud/modules/adapter/base/: __init__.py
DevOps/Python/modules/env/: __init__.py
DevOps/Python/requirements/: BUILD  requirements.in  requirements_lock_3_9.txt
(+243 files in other folders)
